<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- TODO: Add data binding node -->
    <data>

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- TODO: Add motion scene to hide form on vertical scroll. -->
        <androidx.constraintlayout.motion.widget.MotionLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutDescription="@xml/hide_form_motion">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/form_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_medium"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/search_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/representative_search"
                    android:textSize="@dimen/text_size_title"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/address_line_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="Address Line 1"
                    android:hint="@string/address_line_1"
                    android:inputType="textPostalAddress"
                    android:text="@{viewModel.addressLine1}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/search_title" />

                <EditText
                    android:id="@+id/address_line_2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:autofillHints="Address Line 2"
                    android:hint="@string/address_line_2"
                    android:inputType="textPostalAddress"
                    android:text="@{viewModel.addressLine2}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/address_line_1" />

                <EditText
                    android:id="@+id/city"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:autofillHints="City"
                    android:hint="@string/city"
                    android:inputType="textPostalAddress"
                    android:text="@{viewModel.city}"
                    app:layout_constraintEnd_toStartOf="@id/state"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/address_line_2" />

                <Spinner
                    android:id="@+id/state"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:autofillHints="State"
                    android:entries="@array/states"
                    android:inputType="textPostalAddress"
                    android:selectedItemPosition="@{viewModel.statePosition}"
                    app:layout_constraintBottom_toBottomOf="@id/city"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/city"
                    app:layout_constraintTop_toTopOf="@id/city" />

                <EditText
                    android:id="@+id/zip"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:autofillHints="Zip"
                    android:hint="@string/zip_code"
                    android:inputType="number"
                    android:maxLength="5"
                    android:text="@{viewModel.zip}"
                    app:layout_constraintEnd_toEndOf="@id/city"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/city" />

                <Button
                    android:id="@+id/button_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding_large"
                    android:layout_marginTop="@dimen/text_size_large"
                    android:layout_marginEnd="@dimen/padding_large"
                    android:layout_marginBottom="@dimen/padding_large"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:text="@string/search_button"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toBottomOf="@id/zip" />

                <Button
                    android:id="@+id/button_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding_large"
                    android:layout_marginTop="@dimen/text_size_large"
                    android:layout_marginEnd="@dimen/padding_large"
                    android:layout_marginBottom="@dimen/padding_large"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:text="@string/use_my_location"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toBottomOf="@id/button_search" />



            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView
                android:id="@+id/representative_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_medium"
                android:text="@string/my_representatives"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/form_container" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/representative_recycler"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:padding="5dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/representative_title"
                tools:listitem="@layout/representative_item" />

        </androidx.constraintlayout.motion.widget.MotionLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>